Add some HTML5 tests to the list of demos.

--- a/resources/demos.html
+++ b/resources/demos.html
@@ -40,6 +40,7 @@
         { url: "https://threejs.org/examples/webgl_camera.html", local: true },
         { url: "https://threejs.org/examples/webgl_effects_anaglyph.html", local: false },
         { url: "https://threejs.org/examples/webgl_effects_parallaxbarrier.html", local: false },
+        { url: "https://html5test.com/", local: false },
         { url: "https://threejs.org/examples/webgl_effects_stereo.html", local: false },
         { url: "https://threejs.org/examples/webgl_geometries.html", local: false },
         { url: "https://threejs.org/examples/webgl_geometries2.html", local: false },
@@ -54,6 +55,7 @@
         { url: "https://threejs.org/examples/webgl_gpgpu_protoplanet.html", local: true },
         { url: "https://threejs.org/examples/webgl_gpgpu_water.html", local: true },
         { url: "https://threejs.org/examples/webgl_helpers.html", local: false },
+        { url: "http://acid3.acidtests.org/", local: false },
         { url: "https://threejs.org/examples/webgl_interactive_buffergeometry.html", local: true },
         { url: "https://threejs.org/examples/webgl_interactive_lines.html", local: true },
         { url: "https://threejs.org/examples/webgl_interactive_points.html", local: false },
@@ -68,6 +70,7 @@
         { url: "https://threejs.org/examples/webgl_loader_assimp2json.html", local: false },
         { url: "https://threejs.org/examples/webgl_loader_awd.html", local: false },
         { url: "https://threejs.org/examples/webgl_loader_bvh.html", local: false },
+        { url: "http://www.webstandards.org/files/acid2/test.html#top", local: false },
         { url: "https://threejs.org/examples/webgl_loader_collada_keyframe.html", local: false },
         { url: "https://threejs.org/examples/webgl_loader_collada_kinematics.html", local: false },
         { url: "https://threejs.org/examples/webgl_loader_collada_skinning.html", local: false },
